Fix footer unnecessary extra space 🐛
Se eliminó un párrafo vacío que aparecía en el footer y se eliminó el margen heredado por el .container.

--- a/src/public/styles/main.css
+++ b/src/public/styles/main.css
@@ -511,6 +511,7 @@ nav .nav__navigation a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin: 0px auto;
 }
 
 .footerAuthors {
